--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # The contents of this file are "secret" so it should never be committed to public source control
 # This file is here for demo purposes ONLY
 
-# ==>> PLEASE ENABLE ADD `.env` TO .gitignore <<==
+# ==>> PLEASE ADD THIS FILE TO .gitignore! <<==
 
 # Example DATABASE connection string
 DATABASE=postgres://<username>:<password>@stampy.db.elephantsql.com:5432/<username>
